--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
   "name": "knight_chris_assignment3a",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "",
+  "author": "Chris Knight",
   "license": "ISC",
   "dependencies": {
     "crypto-js": "^4.2.0",
     "express": "^4.18.2"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cknight729/Assignment2New.git"
+  },
+  "bugs": {
+    "url": "https://github.com/cknight729/Assignment2New/issues"
+  },
+  "homepage": "https://github.com/cknight729/Assignment2New#readme",
+  "description": ""
 }
